--- a/style.css
+++ b/style.css
@@ -1,14 +1,19 @@
 * {
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+}
+
+body {
     text-align: center;
     list-style-type: none;
     color: white;
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+    background-image: url(https://images.wallpaperscraft.com/image/single/river_trees_starry_sky_147625_3840x2400.jpg);
+    background-size: cover;
 }
 
-body {
-    background-image: url(https://i.pinimg.com/736x/ea/2c/f6/ea2cf6975ca4178d53a27b72c301f7b2.jpg);
-    background-size: cover;
+.head {
+    font-size: 50px;
+    font-weight: bold;
 }
 
 @keyframes float {
@@ -37,10 +42,25 @@ a:hover {
 a {
     color: white;
     text-decoration: none;
-    font-size: 18px;
+    font-size: 28px;
+    background-color: rgba(0, 0, 0, 0.1);
+    border-radius: 5px;
     transition: color 0.3s ease, text-decoration 0.3s ease;
 }
 
+.sign-1 {
+    font-size: 20px;
+}
+
 .choise {
+    font-size: 28px;
     animation: float 3s ease-out infinite;
+}
+
+.catalog {
+    font-size: 17px;
+}
+
+.register {
+    font-size: 17px;
 }
