--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body {
     list-style-type: none;
     color: white;
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
-    background-image: url(https://images.wallpaperscraft.com/image/single/river_trees_starry_sky_147625_3840x2400.jpg);
+    background-image: url(https://i.pinimg.com/originals/53/44/9f/53449fa87702af80374c45b87080c639.jpg);
     background-size: cover;
 }
 
