--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@
 
 body {
     height: 100vh;
-    background: linear-gradient(rgba(0, 0, 0, .5), rgba(0, 0, 0, .5)), url(images/background.jpg), no-repeat;
+    background: linear-gradient(rgba(0, 0, 0, .5), rgba(0, 0, 0, .5)), url(./images/background.jpg), no-repeat;
     background-position: center;
     background-size: cover;
 }
